# Maurice

./: LICENCE  README.md
Backend/: .gitignore  Backend.sln
Backend/Properties/: launchSettings.json
Python-Server/: pyproject.toml
PythonServer/: .gitignore  main.py  pyproject.toml
PythonServer/routes/: route_tripo_sr.py
View/: app.config.ts  bun.lockb  nuxt.config.ts  package.json
View/assets/scss/: _override.scss  _variables.scss  style.scss
View/assets/scss/components/: _VButtons.scss  _VCard.scss  _VShadow.scss  _VTabs.scss  _VTextField.scss
View/assets/scss/layout/: _sidebar.scss  _topbar.scss
View/components/icon/: index.vue
View/components/layout/Header/: index.vue
View/components/layout/Sidebar/: NavIcon.vue  index.vue  sidebarItem.ts
View/components/layout/Sidebar/NavGroup/: index.vue
View/components/layout/Sidebar/NavItem/: index.vue
View/components/pages/babylon/turorial2-2/: MyFirstScene.ts  index.vue
View/components/pages/babylon/tutorial1/: MyFirstScene.ts  index.vue
View/components/pages/babylon/tutorial2/: MyFirstScene.ts  index.vue
View/components/pages/babylon/tutorial3/: MyScene.ts  index.vue
View/components/pages/home/: index.vue
View/components/pages/home/BeforeSearch/: index.vue
View/components/pages/home/Chat/: Bot.vue  User.vue  index.vue
View/components/pages/home/ModelViewer/: generateModelScene.ts  index.vue
View/layouts/: default.vue
View/pages/: index.vue
View/plugins/: vuePerfectScrollbar.ts  vuetify.ts
View/stores/: searchStore.ts
View/theme/: ThemeType.ts  theme.ts
(+1 files in other folders)
