[tool.poetry]
name = "python-server"
version = "0.1.0"
description = "TripoSR Server"
authors = ["yorimichi <yorimichi.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
install = "^1.3.5"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
black = "^24.3.0"
poethepoet = "^0.25.0"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",    # printを許可しない
    "D400",    # 文字の最後はピリオドにする
    "ISC003",  # 文字列同士の連結に+を使わず暗黙的に連結する規則
]

[tool.ruff.format]
quote-style = "double"

[tool.poe.tasks]
uvicorn = {shell = "uvicorn main:app --reload", help="Run uvicorn with hot reload in development."}
format = {shell = "black . && ruff fix . && ruff check .", help="Format python code with black and ruff."}
lint = {shell = "ruff check ./", help="Lint python code with ruff."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
